syntax = "proto3";

package axion.infrastructure;

import "common/common.proto";
import "common/health.proto";
import "infrastructure/clusters.proto";
import "infrastructure/servers.proto";
import "infrastructure/agents.proto";

// Infrastructure Service - управление серверами и кластерами

service InfrastructureService {
  // Clusters
  rpc CreateCluster(CreateClusterRequest) returns (ClusterResponse);
  rpc GetCluster(GetClusterRequest) returns (ClusterResponse);
  rpc UpdateCluster(UpdateClusterRequest) returns (ClusterResponse);
  rpc DeleteCluster(DeleteClusterRequest) returns (axion.common.Empty);
  rpc ListClusters(ListClustersRequest) returns (ListClustersResponse);
  rpc ListClusterServers(ListClusterServersRequest) returns (ListServersResponse);
  
  // Servers
  rpc CreateServer(CreateServerRequest) returns (ServerResponse);
  rpc GetServer(GetServerRequest) returns (ServerResponse);
  rpc UpdateServer(UpdateServerRequest) returns (ServerResponse);
  rpc DeleteServer(DeleteServerRequest) returns (axion.common.Empty);
  rpc ListServers(ListServersRequest) returns (ListServersResponse);
  rpc TestServerConnection(TestServerConnectionRequest) returns (TestServerConnectionResponse);
  
  // Agent management
  rpc InstallAgent(InstallAgentRequest) returns (InstallAgentResponse);
  rpc GetAgentStatus(GetAgentStatusRequest) returns (AgentStatusResponse);
  
  // Server Configuration
  rpc ConfigureServer(ConfigureServerRequest) returns (ConfigureServerResponse);

  // System Requirements
  rpc CalculateSystemRequirements(CalculateSystemRequirementsRequest) returns (CalculateSystemRequirementsResponse);
  
  // Health Check
  rpc HealthCheck(axion.common.HealthCheckRequest) returns (axion.common.HealthCheckResponse);
}
